@@ -25,13 +25,15 @@ public class Solution {
         map.put("Arbus", false);
         map.put("Baby", null);
         map.put("Cat", "Cat");
-        map.put("Eat", new Long(56));
-        map.put("Food", new Character('3'));
+        map.put("Eat", 56L);
+        map.put("Food", Character.valueOf('3'));
         map.put("Gevey", '6');
         map.put("Hugs", 111111111111L);
         map.put("Comp", (double) 123);
 
-        //напишите тут ваш код
+        for (Map.Entry<String, Object> pair : map.entrySet()) {
+            System.out.println(pair.getKey() + " - " + pair.getValue());
+        }
 
     }
 }
